# CPP-CMake-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
cmake/: default_compiler_flags.cmake  defaults.cmake  sanitizers.cmake
source/: CMakeLists.txt  main.cpp
source/placeHolder/: placeHolder.cpp
test/: test.cpp
